--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,6 @@ google-generativeai==0.5.4
 python-dotenv==1.0.0
 speechrecognition==3.10.0
 pyttsx3==2.90
+PyAudio==0.2.11
 requests==2.31.0
 gunicorn==21.2.0
